# Chargebee

./: .env.example  .gitignore  DESIGN.md  README.md  add_features.txt  docker-compose.yml  plan.txt
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routers/: admin.py  agents.py  alerts.py  analytics.py  chat.py  customers.py  graph.py  ingest.py  risk.py  summary.py  timeline.py
backend/app/core/: audit.py  cache.py  config.py  db.py  logging.py  security.py
backend/app/models/: __init__.py  admin.py  alerts.py  analytics.py  assistant.py  customer_data.py  risk.py  summary.py
backend/app/schemas/: chat.py  customer.py  summary.py
backend/app/seed/: customers.py  reference.py  run.py
backend/app/services/: facts.py
backend/app/services/agents/: __init__.py  intent.py  planner.py  specialists.py
backend/app/services/graph/: __init__.py  client.py  queries.py  sync.py
backend/app/services/llm/: __init__.py  embeddings.py  prompts.py  router.py
backend/app/services/rag/: __init__.py  chat_engine.py  retriever.py
backend/app/services/scoring/: __init__.py  scorer.py
backend/app/services/summary/: __init__.py  generator.py
backend/app/services/timeline/: __init__.py  aggregator.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
frontend/src/lib/: api.ts  (+3 more)
supabase/: all_migrations.sql  config.toml
supabase/migrations/: 20260717120000_extensions.sql  20260717120010_schema.sql  20260717120020_rls.sql  20260718120000_perf_indexes.sql
(+26 files in other folders)
